--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:maxSdkVersion="30" />
 
     <!-- required for API 23 - 33 -->
-    <uses-permission-sdk-23
+<!--     <uses-permission-sdk-23
         android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission-sdk-23
-        android:name="android.permission.ACCESS_FINE_LOCATION"/>
+        android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
 
     <!-- API 31+ -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
